--- a/join.html
+++ b/join.html
@@ -20,27 +20,20 @@
       text-align: center;
     }
 
-    h1 {
-      color: #333;
-      margin-bottom: 20px;
-    }
-
     .rooms {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
       margin-top: 20px;
     }
 
     .room-btn {
+      display: block;
       padding: 10px 20px;
       font-size: 16px;
-      color: white;
+      color: #fff;
       background-color: #1d557d;
       border: none;
       border-radius: 5px;
+      margin: 5px 0;
       cursor: pointer;
-      transition: background-color 0.3s;
     }
 
     .room-btn:hover {
@@ -50,60 +43,52 @@
 </head>
 <body>
   <div class="container">
-    <h1>Join a Room</h1>
+    <h1>Available Rooms</h1>
     <div class="rooms" id="roomsContainer">
-      <!-- Room buttons will be dynamically added here -->
+      <!-- Buttons will be added dynamically -->
     </div>
   </div>
 
   <script>
     // Firebase configuration
     const firebaseConfig = {
-  apiKey: "AIzaSyAnvbxwW94UfEHHJEsVFFruyP20taJPqZo",
-  authDomain: "video-confrence-9e131.firebaseapp.com",
-  databaseURL: "https://video-confrence-9e131-default-rtdb.firebaseio.com",
-  projectId: "video-confrence-9e131",
-  storageBucket: "video-confrence-9e131.firebasestorage.app",
-  messagingSenderId: "299971534260",
-  appId: "1:299971534260:web:2a751958721d1181c3a6e1",
-  measurementId: "G-YHZFY3TSMT"
-};
+      apiKey: "AIzaSyAnvbxwW94UfEHHJEsVFFruyP20taJPqZo",
+      authDomain: "video-confrence-9e131.firebaseapp.com",
+      databaseURL: "https://video-confrence-9e131-default-rtdb.firebaseio.com",
+      projectId: "video-confrence-9e131",
+      storageBucket: "video-confrence-9e131.firebasestorage.app",
+      messagingSenderId: "299971534260",
+      appId: "1:299971534260:web:2a751958721d1181c3a6e1",
+      measurementId: "G-YHZFY3TSMT"
+    };
 
     // Initialize Firebase
     const app = firebase.initializeApp(firebaseConfig);
     const database = firebase.database();
 
-    // DOM Elements
+    // Reference to rooms in Firebase
     const roomsContainer = document.getElementById('roomsContainer');
+    const roomsRef = database.ref('rooms');
 
-    // Function to fetch rooms and display them as buttons
-    function fetchRooms() {
-      firebase.database().ref('rooms').get().then((snapshot) => {
-        if (snapshot.exists()) {
-          const roomsData = snapshot.val();
-          // Clear current room buttons
-          roomsContainer.innerHTML = '';
-          // Add each room as a button
-          Object.keys(roomsData).forEach((roomName) => {
-            const button = document.createElement('button');
-            button.textContent = roomName;
-            button.className = 'room-btn';
-            button.onclick = () => {
-              alert(`Joining room: ${roomName}`);
-              // Add your room joining logic here
-            };
-            roomsContainer.appendChild(button);
-          });
-        } else {
-          roomsContainer.innerHTML = '<p>No rooms available.</p>';
-        }
-      }).catch((error) => {
-        console.error("Error fetching rooms:", error);
-      });
-    }
-
-    // Continuously fetch rooms every second
-    setInterval(fetchRooms, 1000);
+    // Listen for real-time updates
+    roomsRef.on('value', (snapshot) => {
+      roomsContainer.innerHTML = ''; // Clear the container
+      if (snapshot.exists()) {
+        const rooms = snapshot.val();
+        Object.keys(rooms).forEach((roomName) => {
+          const button = document.createElement('button');
+          button.className = 'room-btn';
+          button.textContent = roomName;
+          button.onclick = () => {
+            alert(`Joining room: ${roomName}`);
+            // Add your room joining logic here
+          };
+          roomsContainer.appendChild(button);
+        });
+      } else {
+        roomsContainer.innerHTML = '<p>No rooms available.</p>';
+      }
+    });
   </script>
 </body>
 </html>
