--- a/create.html
+++ b/create.html
@@ -90,7 +90,7 @@
     const createButton = document.getElementById('createButton');
 
     // Reference to the Firebase Realtime Database location for the room's text
-    const roomRef = database.ref('room/text');
+    const roomRef = database.ref('text');
 
     // Sync text area changes to Firebase
     createButton.addEventListener('click', () => {
